<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <!--Content-->
    <LinearLayout
        android:background="#82ffffff"
        android:padding="@dimen/padding"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="@dimen/content"
        android:layout_height="wrap_content">
        <!--Logo-->
        <ImageView
            android:src="@drawable/logocoffee3"
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo" />

        <!--app Name-->
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="@dimen/margin"
            android:textStyle="bold"
            android:textSize="@dimen/h1"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--User-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Icon-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_user" />

            <!--User-->
            <EditText
                android:id="@+id/edtEmail"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/e_mail"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>

        <!--Password-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Icon-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_pass" />

            <!--Password-->
            <EditText
                android:id="@+id/edtPassword"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <!--Button Sing In-->
        <Button
            android:id="@+id/btnSingIn"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"
            android:text="sign in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--New Register-->
        <TextView
            android:id="@+id/txtNewRegister"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin"
            android:text="@string/new_register"
            android:textSize="@dimen/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>


</RelativeLayout>